packages/wcagify/app/assets/css/main.css
@import 'tailwindcss';
@import '@nuxt/ui';

@source "../../components";

a:not([class]) {
  text-decoration: underline;
}

.prose a {
  text-decoration: underline;
}

:focus-visible {
  outline: 0.375rem double black !important;
  box-shadow: 0 0 0 0.25rem white !important;
  border-radius: 0.125rem;
}

button[role='switch'] {
  border: 2px solid currentColor !important;
}

button[role='switch'] [data-slot='thumb'] {
  width: 16px !important;
  height: 16px !important;
  background-color: black !important;
}

@theme static {
  --font-sans: 'Public Sans', sans-serif;

  --color-green-50: #effdf5;
  --color-green-100: #d9fbe8;
  --color-green-200: #b3f5d1;
  --color-green-300: #75edae;
  --color-green-400: #00dc82;
  --color-green-500: #00c16a;
  --color-green-600: #00a155;
  --color-green-700: #007f45;
  --color-green-800: #016538;
  --color-green-900: #0a5331;
  --color-green-950: #052e16;
}

